--- a/AppentusTaskApp/app/src/main/res/layout/item_author.xml
+++ b/AppentusTaskApp/app/src/main/res/layout/item_author.xml
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/iv_author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_150sdp"
+            android:layout_height="@dimen/_150sdp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
